--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kdrzclk.github.io/my-app",
+  "homepage": "https://kdrzclk.github.io/birtday_reminder--react-simple-project",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
